# py_bridge

./: .gitignore  LICENSE  README.md  mix.exs
.github/workflows/: ci.yml
doc/: .build  .build.epub  .build.markdown  404.html  PyBridge.Pool.html  PyBridge.Pool.md  PyBridge.Protocol.html  PyBridge.Protocol.md  PyBridge.Telemetry.html  PyBridge.Telemetry.md  PyBridge.Worker.html  PyBridge.Worker.md  PyBridge.epub  PyBridge.html  PyBridge.md  api-reference.html  api-reference.md  index.html  llms.txt  readme.html  readme.md  search.html
lib/: py_bridge.ex
lib/py_bridge/: pool.ex  protocol.ex  telemetry.ex  worker.ex
python/: README.md  pyproject.toml
python/py_bridge/: __init__.py  worker.py
python/tests/: test_worker.py
test/: protocol_test.exs  telemetry_test.exs  worker_test.exs
test/support/: echo_worker.py
